--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ top:700px;
 <div class="container1">
 <div class="matter1">
 <h1 id="about">ABOUT US</h1>
-<img src="./Coffee/images/coffee.avif">
+<img src="./images/coffee.avif">
 </div>
 <div  class="matter1 down1">
 <h1>What makes our coffee special</h1>
